--- a/package.json
+++ b/package.json
@@ -6,18 +6,33 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babelify": "^8.0.0",
     "browserify": "^14.5.0",
+    "css-loader": "^0.28.7",
+    "dev-server": "0.0.2",
+    "file-loader": "^1.1.5",
     "promise-polyfill": "^6.1.0",
+    "style-loader": "^0.19.0",
+    "uglifyjs-webpack-plugin": "^1.1.2",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.9.7",
+    "webpack-merge": "^4.1.1",
     "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
-    "build": "browserify scripts/app.js -o compiled/bundle.js -t [ babelify ]"
+    "start": "webpack-dev-server --open --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "dependencies": {
+    "@babel/core": "^7.0.0-beta.34",
+    "@babel/preset-env": "^7.0.0-beta.34",
+    "babel-loader": "^8.0.0-beta.0",
     "babel-polyfill": "^6.26.0",
+    "font-awesome": "^4.7.0",
     "promise-polyfill": "^6.1.0",
     "whatwg-fetch": "^2.0.3"
   }
