--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "css-loader": "^0.28.7",
     "dev-server": "0.0.2",
     "file-loader": "^1.1.5",
+    "lazy-loader": "0.0.1-dev",
     "promise-polyfill": "^6.1.0",
     "style-loader": "^0.19.0",
     "uglifyjs-webpack-plugin": "^1.1.2",
