--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "dev-server": "0.0.2",
     "file-loader": "^1.1.5",
     "lazy-loader": "0.0.1-dev",
+    "node-sass": "^4.7.2",
     "promise-polyfill": "^6.1.0",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "uglifyjs-webpack-plugin": "^1.1.2",
     "url-loader": "^0.6.2",
