--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babelify": "^8.0.0",
@@ -14,6 +15,7 @@
     "css-loader": "^0.28.7",
     "dev-server": "0.0.2",
     "file-loader": "^1.1.5",
+    "json-loader": "^0.5.7",
     "lazy-loader": "0.0.1-dev",
     "node-sass": "^4.7.2",
     "promise-polyfill": "^6.1.0",
@@ -31,10 +33,9 @@
     "build": "webpack --config webpack.prod.js"
   },
   "dependencies": {
-    "@babel/core": "^7.0.0-beta.34",
-    "@babel/preset-env": "^7.0.0-beta.34",
-    "babel-loader": "^8.0.0-beta.0",
+    "babel-loader": "^7.1.0",
     "babel-polyfill": "^6.26.0",
+    "babel-runtime": "^6.26.0",
     "font-awesome": "^4.7.0",
     "promise-polyfill": "^6.1.0",
     "whatwg-fetch": "^2.0.3"
