add sansita font into bundle

--- a/package.json
+++ b/package.json
@@ -13,14 +13,13 @@
     "babelify": "^8.0.0",
     "browserify": "^14.5.0",
     "css-loader": "^0.28.7",
-    "dev-server": "0.0.2",
     "file-loader": "^1.1.5",
     "json-loader": "^0.5.7",
-    "lazy-loader": "0.0.1-dev",
     "node-sass": "^4.7.2",
     "promise-polyfill": "^6.1.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
+    "typeface-sansita-one": "0.0.44",
     "uglifyjs-webpack-plugin": "^1.1.2",
     "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
