--- a/backend-2/package.json
+++ b/backend-2/package.json
@@ -13,7 +13,8 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "mongoose": "^5.0.3",
-    "pug": "^2.0.0-rc.4"
+    "pug": "^2.0.0-rc.4",
+    "winston": "^3.0.0-rc1"
   },
   "devDependencies": {
     "nodemon": "^1.14.11"
