--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "pug": "^2.0.0-rc.4"
   },
   "devDependencies": {
-    "nodemon": "^1.14.11"
+    "nodemon": "^1.14.11",
+    "winston": "^3.0.0-rc1"
   }
 }
