--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "passport-local": "^1.0.0",
     "promise-polyfill": "^6.1.0",
     "whatwg-fetch": "^2.0.3"
   }
