--- a/react/package.json
+++ b/react/package.json
@@ -24,12 +24,14 @@
     "webpack-node-externals": "^1.2.0"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "express": "^4.14.0",
     "mongoose": "^5.0.8",
     "pug": "^2.0.0-rc.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "styled-components": "^2.2.4"
   }
 }
