--- a/react/package.json
+++ b/react/package.json
@@ -23,6 +23,8 @@
     "body-parser": "^1.18.2",
     "express": "^4.14.0",
     "mongoose": "^5.0.8",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pug": "^2.0.0-rc.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
