--- a/angular/package.json
+++ b/angular/package.json
@@ -9,16 +9,38 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "angular": "^1.6.9",
-    "angular-mocks": "^1.6.9",
-    "angular-ui-router": "^1.0.3",
-    "body-parser": "^1.18.2",
-    "express": "^4.16.3",
-    "jasmine-core": "^3.1.0",
-    "karma": "^2.0.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-jasmine": "^1.1.1",
-    "requirejs": "^2.3.5"
+    "angular-mocks": "1.5.6",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "istanbul-instrumenter-loader": "^2.0.0",
+    "jasmine": "2.5.2",
+    "jasmine-core": "2.5.2",
+    "jasmine-reporters": "2.2.0",
+    "karma": "1.3.0",
+    "karma-chrome-launcher": "2.0.0",
+    "karma-coverage": "1.1.1",
+    "karma-jasmine": "1.0.2",
+    "karma-junit-reporter": "1.1.0",
+    "karma-mocha": "1.2.0",
+    "karma-ng-html2js-preprocessor": "1.0.0",
+    "karma-requirejs": "1.1.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "2.0.3",
+    "stryker": "^0.6.1",
+    "stryker-api": "^0.5.0",
+    "stryker-html-reporter": "^0.4.1",
+    "stryker-jasmine": "^0.2.1",
+    "stryker-karma-runner": "^0.4.0",
+    "webpack": "2.2.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "angular": "1.6.4",
+    "angular-resource": "1.6.4",
+    "angular-route": "1.6.4",
+    "angular-ui-router": "1.0.0-rc.1",
+    "babel-polyfill": "6.9.1",
+    "requirejs": "2.1.20",
+    "text-loader": "0.0.1"
+  }
 }
