--- a/angular/package.json
+++ b/angular/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --watch",
+    "mutate": "node_modules/.bin/stryker run",
+    "start": "node ./server.js",
+    "test": "karma start"
   },
   "author": "",
   "license": "ISC",
